Tests/a1/reject/27.ul
int main (int x) {
	print = x;
	print+3;
}